--- a/official_report/thesis_FINAL/main.tex
+++ b/official_report/thesis_FINAL/main.tex
@@ -4,9 +4,9 @@
 \renewcommand{\gTitle}{Model Repair by Incorporating Negative Instances In Process Enhancement}
 \renewcommand{\gAuthor}{Kefang Ding}
 \renewcommand{\gHeader}{Master Thesis}
-\renewcommand{\gSupervisor}{Prof. Wil M.P. van der Aalst\\
-Prof. Thomas Rose\\
-Dr. ir. Sebastiaan J. van Zelst}
+\renewcommand{\gSupervisor}{Prof. Wil M.P. van der Aalst \\ 
+	Prof. Thomas Rose \\
+    Dr. Sebastiaan J. van Zelst}
 \renewcommand{\gInstitution}{PADS RWTH University}
 
 \begin{document}
@@ -39,6 +39,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 \chapter{Background} \label{chap:backgrd}
 \input{chapters/background.tex}
+
 
 \iffalse
 \chapter{Preliminaries} \label{chap:prelim}
