--- a/official_report/thesis_FINAL/references.bib
+++ b/official_report/thesis_FINAL/references.bib
@@ -107,3 +107,22 @@ publisher={Springer}
 	publisher={IEEE}
 }
 
+@article{van2004workflow,
+	title={Workflow mining: Discovering process models from event logs},
+	author={Van der Aalst, Wil and Weijters, Ton and Maruster, Laura},
+	journal={IEEE Transactions on Knowledge and Data Engineering},
+	volume={16},
+	number={9},
+	pages={1128--1142},
+	year={2004},
+	publisher={IEEE}
+}
+
+@inproceedings{van2008process,
+	title={Process discovery using integer linear programming},
+	author={Van der Werf, Jan Martijn EM and van Dongen, Boudewijn F and Hurkens, Cor AJ and Serebrenik, Alexander},
+	booktitle={International conference on applications and theory of petri nets},
+	pages={368--387},
+	year={2008},
+	organization={Springer}
+}
