--- a/official_report/thesis_FINAL/main.tex
+++ b/official_report/thesis_FINAL/main.tex
@@ -37,7 +37,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \input{chapters/introduction.tex}
 
 
-\chapter{Background} \label{chap:backgrd}
+\chapter{Related Work} \label{chap:backgrd}
 \input{chapters/background.tex}
 
 
