--- a/official_report/thesis_FINAL/references.bib
+++ b/official_report/thesis_FINAL/references.bib
@@ -70,7 +70,14 @@ publisher={Springer}
 	year={2014},
 	publisher={IEEE}
 }
-
+@incollection{van2009process,
+	title={Process mining: Overview and outlook of petri net discovery algorithms},
+	author={Van Dongen, Boudewijn F and De Medeiros, AK Alves and Wen, Lijie},
+	booktitle={Transactions on Petri Nets and Other Models of Concurrency II},
+	pages={225--242},
+	year={2009},
+	publisher={Springer}
+}
 @inproceedings{ponce2016incorporating,
 	title={Incorporating negative information in process discovery},
 	author={Ponce-de-Le{\'o}n, Hernan and Carmona, Josep and vanden Broucke, Seppe KLM},
@@ -96,6 +103,26 @@ publisher={Springer}
 	year={2014},
 	organization={Springer}
 }
+@article{de2007genetic,
+	title={Genetic process mining: an experimental evaluation},
+	author={de Medeiros, Ana Karla A and Weijters, Anton JMM and van der Aalst, Wil MP},
+	journal={Data Mining and Knowledge Discovery},
+	volume={14},
+	number={2},
+	pages={245--304},
+	year={2007},
+	publisher={Springer}
+}
+@article{weijters2003rediscovering,
+	title={Rediscovering workflow models from event-based data using little thumb},
+	author={Weijters, Anton JMM and Van der Aalst, Wil MP},
+	journal={Integrated Computer-Aided Engineering},
+	volume={10},
+	number={2},
+	pages={151--162},
+	year={2003},
+	publisher={IOS Press}
+}
 @article{carmona2014process,
 	title={Process discovery algorithms using numerical abstract domains},
 	author={Carmona, Josep and Cortadella, Jordi},
@@ -106,7 +133,6 @@ publisher={Springer}
 	year={2014},
 	publisher={IEEE}
 }
-
 @article{van2004workflow,
 	title={Workflow mining: Discovering process models from event logs},
 	author={Van der Aalst, Wil and Weijters, Ton and Maruster, Laura},
@@ -125,4 +151,21 @@ publisher={Springer}
 	pages={368--387},
 	year={2008},
 	organization={Springer}
+}
+
+@inproceedings{bergenthum2007process,
+	title={Process mining based on regions of languages},
+	author={Bergenthum, Robin and Desel, J{\"o}rg and Lorenz, Robert and Mauser, Sebastian},
+	booktitle={International Conference on Business Process Management},
+	pages={375--383},
+	year={2007},
+	organization={Springer}
+}
+@inproceedings{cortadella1995synthesizing,
+	title={Synthesizing Petri nets from state-based models},
+	author={Cortadella, Jordi and Kishinevsky, Michael and Lavagno, Luciano and Yakovlev, Alex},
+	booktitle={Proceedings of IEEE International Conference on Computer Aided Design (ICCAD)},
+	pages={164--171},
+	year={1995},
+	organization={IEEE}
 }
