--- a/official_report/thesis_FINAL/references.bib
+++ b/official_report/thesis_FINAL/references.bib
@@ -1,5 +1,14 @@
 % write down the reference here
 % add more content to try git hash-object
+@incollection{van2016data,
+	title={Data science in action},
+	author={Van der Aalst, Wil},
+	booktitle={Process Mining},
+	pages={3--23},
+	year={2016},
+	publisher={Springer}
+}
+
 @book{van2011process,
 title={Process mining: discovery, conformance and enhancement of business processes},
 author={Van Der Aalst, Wil},
@@ -168,4 +177,49 @@ publisher={Springer}
 	pages={164--171},
 	year={1995},
 	organization={IEEE}
+}
+
+@inproceedings{Buijs2012OnTR,
+	title={On the Role of Fitness, Precision, Generalization and Simplicity in Process Discovery},
+	author={Joos C. A. M. Buijs and Boudewijn F. van Dongen and Wil M. P. van der Aalst},
+	booktitle={OTM Conferences},
+	year={2012}
+}
+
+@book{vanderAalst:2016:PMD:2948762,
+	author = {van der Aalst, Wil},
+	title = {Process Mining: Data Science in Action},
+	year = {2016},
+	isbn = {3662498502, 9783662498507},
+	edition = {2nd},
+	publisher = {Springer Publishing Company, Incorporated},
+} 
+
+@inproceedings{leemans2013discovering,
+	title={Discovering block-structured process models from event logs-a constructive approach},
+	author={Leemans, Sander JJ and Fahland, Dirk and van der Aalst, Wil MP},
+	booktitle={International conference on applications and theory of Petri nets and concurrency},
+	pages={311--329},
+	year={2013},
+	organization={Springer}
+}
+@inproceedings{leemans2014discovering,
+	title={Discovering block-structured process models from incomplete event logs},
+	author={Leemans, Sander JJ and Fahland, Dirk and van der Aalst, Wil MP},
+	booktitle={International Conference on Applications and Theory of Petri Nets and Concurrency},
+	pages={91--110},
+	year={2014},
+	organization={Springer}
+}
+@online{ProM,
+	author = {Process Mining Group, Eindhoven Technical University. © 2010.},
+	title = {ProM Introduction},
+	url = {http://www.promtools.org/doku.php},
+	urldate = {2019-03-19}
+}
+@online{MyPlugin,
+	author = {Kefang Ding},
+	title = {IncorporateNegativeInformation},
+	url = {http://ais-hudson.win.tue.nl:8080/job/IncorporateNegativeInformation/},
+	urldate = {2019-03-19}
 }
