apply thesis example to the introduction part

--- a/official_report/thesis_FINAL/WCarticle.cls
+++ b/official_report/thesis_FINAL/WCarticle.cls
@@ -44,6 +44,9 @@
 %% allow more lines into one lines
 \RequirePackage{makecell}
 \RequirePackage[ruled,linesnumbered]{algorithm2e}
+\RequirePackage{svg}
+\RequirePackage{subcaption}
+
 %%make the chapters separate from each other
 %\RequirePackage{graphicx}
 %\graphicspath{{figures/}{../figures/}}
