--- a/official_report/thesis_FINAL/references.bib
+++ b/official_report/thesis_FINAL/references.bib
@@ -17,10 +17,13 @@ year={2011},
 publisher={Springer}
 }
 
-@article{ghasemi2016process,
-	title={Process mining in healthcare: a systematised literature review},
+@article{ghasemi2019event,
+	title={From event logs to goals: a systematic literature review of goal-oriented process mining},
 	author={Ghasemi, Mahdi and Amyot, Daniel},
-	year={2016}
+	journal={Requirements Engineering},
+	pages={1--27},
+	year={2019},
+	publisher={Springer}
 }
 
 @inproceedings{fahland2012repairing,
@@ -67,6 +70,15 @@ publisher={Springer}
 	number={Jun},
 	pages={1305--1340},
 	year={2009}
+}
+
+@inproceedings{van2006structural,
+	title={Structural patterns for soundness of business process models},
+	author={Van Dongen, BF and Mendling, Jan and Van Der Aalst, WMP},
+	booktitle={2006 10th IEEE International Enterprise Distributed Object Computing Conference (EDOC'06)},
+	pages={116--128},
+	year={2006},
+	organization={IEEE}
 }
 
 @article{vanden2014determining,
@@ -195,14 +207,6 @@ publisher={Springer}
 	publisher = {Springer Publishing Company, Incorporated},
 } 
 
-@inproceedings{leemans2013discovering,
-	title={Discovering block-structured process models from event logs-a constructive approach},
-	author={Leemans, Sander JJ and Fahland, Dirk and van der Aalst, Wil MP},
-	booktitle={International conference on applications and theory of Petri nets and concurrency},
-	pages={311--329},
-	year={2013},
-	organization={Springer}
-}
 @inproceedings{leemans2014discovering,
 	title={Discovering block-structured process models from incomplete event logs},
 	author={Leemans, Sander JJ and Fahland, Dirk and van der Aalst, Wil MP},
