--- a/official_report/thesis_FINAL/main.tex
+++ b/official_report/thesis_FINAL/main.tex
@@ -46,12 +46,12 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \chapter{Related Work} \label{chap:backgrd}
 \input{chapters/background.tex}
 
+\fi
 
-
-\chapter{Preliminary} \label{chap:prelim}\pagenumbering{arabic}
+\chapter{Preliminaries} \label{chap:prelim}\pagenumbering{arabic}
 \input{chapters/preliminary.tex}
 
-\fi
+\iffalse
 \chapter{Algorithm} \label{chap:alg}
 \input{chapters/algorithm.tex}
 
@@ -59,11 +59,11 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \chapter{Implementation} \label{chap:impl}
 \input{chapters/implementation.tex}
 
-\iffalse
+
 \chapter{Evaluation} \label{chap:eval}
 \input{chapters/evaluation.tex}
-\fi
 
+\fi
 \chapter{Conclusion} \label{chap:conclusion}
 \input{chapters/conclusion.tex}
 
