modify the main part algorithm

--- a/official_report/thesis_FINAL/WCarticle.cls
+++ b/official_report/thesis_FINAL/WCarticle.cls
@@ -80,6 +80,8 @@
 
 %% Set the enumearete item
 \RequirePackage[shortlabels]{enumitem}
+%% set the section numbering depth
+\setcounter{secnumdepth}{5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% user-defined macros
 \newcommand{\gHeader}{Bachelor thesis}
