--- a/official_report/thesis_FINAL/references.bib
+++ b/official_report/thesis_FINAL/references.bib
@@ -217,7 +217,14 @@ publisher={Springer}
 	year={2014},
 	organization={Springer}
 }
-
+@article{mannhardt2015multi,
+	title={The Multi-perspective Process Explorer.},
+	author={Mannhardt, Felix and De Leoni, Massimiliano and Reijers, Hajo A},
+	journal={BPM (Demos)},
+	volume={1418},
+	pages={130--134},
+	year={2015}
+}
 @online{ProM,
 	author = {Process Mining Group, Eindhoven Technical University. © 2010.},
 	title = {ProM Introduction},
