--- a/official_report/thesis_FINAL/references.bib
+++ b/official_report/thesis_FINAL/references.bib
@@ -192,6 +192,25 @@ publisher={Springer}
 	year={1995},
 	organization={IEEE}
 }
+@incollection{verbeek2017decomposed,
+	title={Decomposed replay using hiding and reduction as abstraction},
+	author={Verbeek, HMW},
+	booktitle={Transactions on Petri Nets and Other Models of Concurrency XII},
+	pages={166--186},
+	year={2017},
+	publisher={Springer}
+}
+
+@article{murata1989petri,
+	title={Petri nets: Properties, analysis and applications},
+	author={Murata, Tadao},
+	journal={Proceedings of the IEEE},
+	volume={77},
+	number={4},
+	pages={541--580},
+	year={1989},
+	publisher={IEEE}
+}
 
 @inproceedings{Buijs2012OnTR,
 	title={On the Role of Fitness, Precision, Generalization and Simplicity in Process Discovery},
