--- a/official_report/thesis_FINAL/main.tex
+++ b/official_report/thesis_FINAL/main.tex
@@ -18,7 +18,7 @@
 \pagestyle{plain}
 %%% TOC
 
-\chapter*{Acknowledgments}\addcontentsline{toc}{chapter}{Aknowledgement}
+\chapter*{Acknowledgments}\addcontentsline{toc}{chapter}{Acknowledgement}
 %The acknowledgments and the people to thank go here, don't forget to include your project advice. 
 \input{chapters/acknowledgements.tex}
 
